sfdx-source/force-app/main/default/objects/Standard_Rate_Card_Tier__mdt/Standard_Rate_Card_Tier__mdt.object-meta.xml
<CustomObject>
    <description>LEM-8767: It stores Default Rate Card Tiers</description>
    <label>Standard Rate Card Tier</label>
    <pluralLabel>Standard Rate Card Tiers</pluralLabel>
</CustomObject>