sfdx-source/force-app/main/default/objects/Standard_Rate_Card_Tier__mdt/fields/Fee_Value__c.field-meta.xml
<CustomField>
    <fullName>Fee_Value__c</fullName>
    <description>LEM-8767: This field holds the Fee Value for a Rate Cate Tier</description>
    <label>Fee Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>