sfdx-source/force-app/main/default/objects/Standard_Rate_Card_Tier__mdt/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <description>LEM-8767: This field holds the Lower Bound Value for a Rate Card Tier</description>
    <label>Lower Bound</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>