sfdx-source/force-app/main/default/objects/Standard_Rate_Card_Tier__mdt/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <description>LEM-8767: This field holds the Upper Bound Value for a Rate Card Tier</description>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>